--- a/AutoBot/AutoBot/AutoBot.csproj
+++ b/AutoBot/AutoBot/AutoBot.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>AutoBot.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EloBuddy">
       <HintPath>..\..\CoreDependency\EloBuddy.dll</HintPath>
@@ -64,6 +67,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hacks.cs" />
+    <Compile Include="Chatting.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
