--- a/AutoBot/AutoBot/AutoBot.csproj
+++ b/AutoBot/AutoBot/AutoBot.csproj
@@ -67,7 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Hacks.cs" />
+    <Compile Include="Ahacks.cs" />
     <Compile Include="Chatting.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
