Back need to test it before.

--- a/AutoBuddyBETA/AutoBuddyBETA.csproj
+++ b/AutoBuddyBETA/AutoBuddyBETA.csproj
@@ -146,13 +146,13 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\item-OLD.txt" />
+    <None Include="Resources\item.txt" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\item.txt" />
+    <Content Include="Resources\item6.21.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
